--- a/sleeping.html
+++ b/sleeping.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stay Booking</title>
+    <title>Dino Stay Booking</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
         :root {
             --primary-color: #4285F4;
             --secondary-color: #34A853;
-            --background-color: #F8F9FA;
+            --background-color: rgba(248, 249, 250, 0.9);
             --text-color: #202124;
             --border-color: #DADCE0;
         }
@@ -17,17 +17,22 @@
             font-family: 'Roboto', Arial, sans-serif;
             line-height: 1.6;
             color: var(--text-color);
-            background-color: var(--background-color);
             margin: 0;
             padding: 20px;
+            background-image: url('/api/placeholder/1920/1080');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            min-height: 100vh;
         }
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            background-color: white;
+            background-color: var(--background-color);
             border-radius: 8px;
             box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3), 0 1px 3px 1px rgba(60,64,67,0.15);
             padding: 20px;
+            backdrop-filter: blur(5px);
         }
         h1, h2 {
             color: var(--primary-color);
@@ -67,6 +72,7 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+            background-color: white;
         }
         .calendar-table th, .calendar-table td {
             border: 1px solid var(--border-color);
@@ -111,6 +117,7 @@
             border: 1px solid var(--border-color);
             border-radius: 4px;
             overflow: hidden;
+            background-color: white;
         }
         .booking-item {
             padding: 10px;
@@ -131,12 +138,15 @@
         .error-message {
             color: #D93025;
             margin-top: 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 4px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Stay Booking</h1>
+        <h1>Dino Stay Booking</h1>
         
         <form id="bookingForm">
             <input type="text" id="name" placeholder="Your Name" required>
@@ -280,6 +290,5 @@
         // Initial render
         renderCalendar();
     </script>
-</div>
 </body>
 </html>
