--- a/sleeping.html
+++ b/sleeping.html
@@ -12,6 +12,29 @@
             background-color: #f1c40f;
             color: #2c3e50;
         }
+        .availability {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            font-size: 12px;
+            color: #27ae60;
+        }
+        .calendar-day {
+            position: relative;
+            height: 80px;
+            overflow: hidden;
+        }
+        .occupancy-number {
+            position: absolute;
+            bottom: 5px;
+            left: 5px;
+            font-size: 12px;
+            color: #2c3e50;
+            background-color: rgba(255,255,255,0.7);
+            padding: 2px 4px;
+            border-radius: 2px;
+            z-index: 1;
+        }
     </style>
 </head>
 <body>
@@ -135,6 +158,7 @@
                             const currentDate = new Date(month.getFullYear(), month.getMonth(), dayCount);
                             const dayBookings = getBookingsForDay(currentDate);
                             const occupancy = dayBookings.length;
+                            const availableBookings = MAX_BOOKINGS_PER_DAY - occupancy;
                             const isFullyBooked = occupancy >= MAX_BOOKINGS_PER_DAY;
                             let occupancyBars = '';
                             dayBookings.forEach((booking, index) => {
@@ -146,7 +170,8 @@
                                 <td class="calendar-day ${isFullyBooked ? 'fully-booked' : ''}">
                                     <div class="day-number">${dayCount}</div>
                                     ${occupancyBars}
-                                    ${occupancy > 0 ? `<div class="occupancy-number">${occupancy}${isFullyBooked ? ' (Full)' : ''}</div>` : ''}
+                                    <div class="occupancy-number">${occupancy}</div>
+                                    <div class="availability">${isFullyBooked ? 'Full' : availableBookings + ' left'}</div>
                                 </td>
                             `;
                             dayCount++;
