--- a/sleeping.html
+++ b/sleeping.html
@@ -3,206 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scenic Stay Booking</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <title>Booking Calendar</title>
     <style>
-        /* ... (previous styles remain unchanged) ... */
-
-        .fully-booked {
-            background-color: #f1c40f;
-            color: #2c3e50;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f0f0;
         }
-        .availability {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            font-size: 12px;
-            color: #27ae60;
+        .calendar {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 5px;
+            margin-bottom: 20px;
+        }
+        .calendar-header {
+            background-color: #4a90e2;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-weight: bold;
         }
         .calendar-day {
-            position: relative;
-            height: 80px;
-            overflow: hidden;
+            background-color: white;
+            border: 1px solid #ddd;
+            padding: 10px;
+            min-height: 100px;
         }
-        .occupancy-number {
-            position: absolute;
-            bottom: 5px;
-            left: 5px;
-            font-size: 12px;
-            color: #2c3e50;
-            background-color: rgba(255,255,255,0.7);
-            padding: 2px 4px;
-            border-radius: 2px;
-            z-index: 1;
+        .date {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .guest {
+            font-size: 0.9em;
+            margin-bottom: 2px;
+        }
+        .guest-count {
+            font-weight: bold;
+            color: #4a90e2;
+            margin-top: 5px;
+        }
+        #updateStayBtn {
+            background-color: #4a90e2;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 1em;
+        }
+        #updateForm {
+            display: none;
+            background-color: white;
+            padding: 20px;
+            margin-top: 20px;
+            border: 1px solid #ddd;
+        }
+        input, button {
+            margin: 10px 0;
+            padding: 5px;
         }
     </style>
 </head>
 <body>
-    <!-- ... (body content remains unchanged) ... -->
+    <div id="calendar" class="calendar"></div>
+    <button id="updateStayBtn">Update Stay</button>
+    <div id="updateForm">
+        <input type="text" id="guestName" placeholder="Your Name">
+        <input type="date" id="newStartDate">
+        <input type="date" id="newEndDate">
+        <button onclick="updateStay()">Submit Update</button>
+    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/pikaday.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css">
     <script>
-        let bookings = [];
-        const bookingForm = document.getElementById('bookingForm');
-        const bookingList = document.getElementById('bookingList');
-        const calendarContainer = document.getElementById('calendarContainer');
-        const errorMessage = document.getElementById('errorMessage');
-        const MAX_BOOKINGS_PER_DAY = 15;
+        const bookings = [
+            { name: "Chagai", startDate: "2024-09-02", endDate: "2024-09-15" },
+            { name: "Jesse", startDate: "2024-09-02", endDate: "2024-09-08" },
+            { name: "Berni", startDate: "2024-09-02", endDate: "2024-09-22" },
+            { name: "Daniel Ramos", startDate: "2024-09-02", endDate: "2024-09-08" },
+            { name: "Nancy", startDate: "2024-09-02", endDate: "2024-09-06" },
+            { name: "Casper", startDate: "2024-09-02", endDate: "2024-09-08" },
+            { name: "Jacqueline", startDate: "2024-09-02", endDate: "2024-09-15" },
+            { name: "Emiliano", startDate: "2024-09-02", endDate: "2024-09-06" },
+            { name: "Aldo", startDate: "2024-09-02", endDate: "2024-09-06" },
+            { name: "Wei Wei", startDate: "2024-09-02", endDate: "2024-09-02" },
+            { name: "Sandor", startDate: "2024-09-03", endDate: "2024-09-06" },
+            { name: "Jessie Alvarado", startDate: "2024-09-05", endDate: "2024-09-07" },
+            { name: "Austin", startDate: "2024-09-10", endDate: "2024-09-15" },
+            { name: "Mahdi", startDate: "2024-09-17", endDate: "2024-09-17" },
+            { name: "Josi", startDate: "2024-09-15", endDate: "2024-09-15" },
+            { name: "Paxi", startDate: "2024-09-15", endDate: "2024-09-15" }
+        ];
 
-        const today = new Date();
-        const threeMonthsLater = new Date(today.getFullYear(), today.getMonth() + 3, today.getDate());
-
-        const startDatePicker = new Pikaday({
-            field: document.getElementById('startDate'),
-            minDate: today,
-            maxDate: threeMonthsLater,
-            onSelect: function() {
-                endDatePicker.setMinDate(this.getDate());
-            }
-        });
-
-        const endDatePicker = new Pikaday({
-            field: document.getElementById('endDate'),
-            minDate: today,
-            maxDate: threeMonthsLater
-        });
-
-        function getRandomColor() {
-            const letters = '0123456789ABCDEF';
-            let color = '#';
-            for (let i = 0; i < 6; i++) {
-                color += letters[Math.floor(Math.random() * 16)];
-            }
-            return color;
-        }
-
-        bookingForm.addEventListener('submit', function(e) {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const startDate = startDatePicker.getDate();
-            const endDate = endDatePicker.getDate();
-
-            if (bookings.some(booking => booking.name === name)) {
-                errorMessage.textContent = "A booking with this name already exists. Please use a different name.";
-                return;
-            }
-
-            if (!isBookingAvailable(startDate, endDate)) {
-                errorMessage.textContent = "Sorry, one or more days in your selected range are fully booked. Please choose different dates.";
-                return;
-            }
-
-            addBooking(name, startDate, endDate);
-            updateDisplay();
-            bookingForm.reset();
-            errorMessage.textContent = "";
-        });
-
-        function isBookingAvailable(startDate, endDate) {
-            let currentDate = new Date(startDate);
-            while (currentDate <= endDate) {
-                if (getBookingsForDay(currentDate).length >= MAX_BOOKINGS_PER_DAY) {
-                    return false;
-                }
-                currentDate.setDate(currentDate.getDate() + 1);
-            }
-            return true;
-        }
-
-        function addBooking(name, startDate, endDate) {
-            const color = getRandomColor();
-            bookings.push({name, startDate, endDate, color});
-        }
-
-        function updateDisplay() {
-            bookingList.innerHTML = bookings.map(booking => `
-                <div class="booking-item">
-                    <div style="display: flex; align-items: center;">
-                        <div class="booking-color" style="background-color: ${booking.color};"></div>
-                        <span class="booking-name">${booking.name}</span>
-                    </div>
-                    <span class="booking-dates">${booking.startDate.toDateString()} to ${booking.endDate.toDateString()}</span>
-                </div>
-            `).join('');
-
-            renderCalendar();
-        }
+        const days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
 
         function renderCalendar() {
-            const months = getMonthsBetweenDates(today, threeMonthsLater);
-            calendarContainer.innerHTML = months.map(month => {
-                const daysInMonth = new Date(month.getFullYear(), month.getMonth() + 1, 0).getDate();
-                const firstDay = new Date(month.getFullYear(), month.getMonth(), 1).getDay();
-                
-                let calendarHTML = `
-                    <table class="calendar-table">
-                        <thead>
-                            <tr>
-                                <th colspan="7">${month.toLocaleString('default', { month: 'long', year: 'numeric' })}</th>
-                            </tr>
-                            <tr>
-                                ${['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'].map(day => `<th>${day}</th>`).join('')}
-                            </tr>
-                        </thead>
-                        <tbody>
-                `;
+            const calendarEl = document.getElementById('calendar');
+            calendarEl.innerHTML = '';
 
-                let dayCount = 1;
-                for (let i = 0; i < 6; i++) {
-                    calendarHTML += '<tr>';
-                    for (let j = 0; j < 7; j++) {
-                        if (i === 0 && j < firstDay || dayCount > daysInMonth) {
-                            calendarHTML += '<td></td>';
-                        } else {
-                            const currentDate = new Date(month.getFullYear(), month.getMonth(), dayCount);
-                            const dayBookings = getBookingsForDay(currentDate);
-                            const occupancy = dayBookings.length;
-                            const availableBookings = MAX_BOOKINGS_PER_DAY - occupancy;
-                            const isFullyBooked = occupancy >= MAX_BOOKINGS_PER_DAY;
-                            let occupancyBars = '';
-                            dayBookings.forEach((booking, index) => {
-                                const height = 100 / Math.min(occupancy, MAX_BOOKINGS_PER_DAY);
-                                occupancyBars += `<div class="occupancy-bar" style="height: ${height}%; background-color: ${booking.color}; bottom: ${index * height}%;"></div>`;
-                            });
+            const startDate = new Date('2024-09-02');
+            const endDate = new Date('2024-09-22');
 
-                            calendarHTML += `
-                                <td class="calendar-day ${isFullyBooked ? 'fully-booked' : ''}">
-                                    <div class="day-number">${dayCount}</div>
-                                    ${occupancyBars}
-                                    <div class="occupancy-number">${occupancy}</div>
-                                    <div class="availability">${isFullyBooked ? 'Full' : availableBookings + ' left'}</div>
-                                </td>
-                            `;
-                            dayCount++;
-                        }
-                    }
-                    calendarHTML += '</tr>';
-                    if (dayCount > daysInMonth) break;
-                }
+            // Add header
+            days.forEach(day => {
+                const headerEl = document.createElement('div');
+                headerEl.className = 'calendar-header';
+                headerEl.textContent = day;
+                calendarEl.appendChild(headerEl);
+            });
 
-                calendarHTML += '</tbody></table>';
-                return calendarHTML;
-            }).join('');
-        }
+            // Add days
+            for (let d = new Date(startDate); d <= endDate; d.setDate(d.getDate() + 1)) {
+                const dayEl = document.createElement('div');
+                dayEl.className = 'calendar-day';
 
-        function getBookingsForDay(date) {
-            return bookings.filter(booking => 
-                date >= booking.startDate && date <= booking.endDate
-            );
-        }
+                const dateEl = document.createElement('div');
+                dateEl.className = 'date';
+                dateEl.textContent = `${d.getDate().toString().padStart(2, '0')}/${(d.getMonth() + 1).toString().padStart(2, '0')}/${d.getFullYear()}`;
+                dayEl.appendChild(dateEl);
 
-        function getMonthsBetweenDates(startDate, endDate) {
-            const months = [];
-            let currentDate = new Date(startDate.getFullYear(), startDate.getMonth(), 1);
-            while (currentDate <= endDate) {
-                months.push(new Date(currentDate));
-                currentDate.setMonth(currentDate.getMonth() + 1);
+                const guestsForDay = bookings.filter(booking => 
+                    new Date(booking.startDate) <= d && new Date(booking.endDate) >= d
+                );
+
+                guestsForDay.forEach(guest => {
+                    const guestEl = document.createElement('div');
+                    guestEl.className = 'guest';
+                    guestEl.textContent = guest.name;
+                    dayEl.appendChild(guestEl);
+                });
+
+                const countEl = document.createElement('div');
+                countEl.className = 'guest-count';
+                countEl.textContent = `Total: ${guestsForDay.length}`;
+                dayEl.appendChild(countEl);
+
+                calendarEl.appendChild(dayEl);
             }
-            return months;
         }
 
-        // Initial render
+        document.getElementById('updateStayBtn').addEventListener('click', function() {
+            document.getElementById('updateForm').style.display = 'block';
+        });
+
+        function updateStay() {
+            const name = document.getElementById('guestName').value;
+            const newStartDate = document.getElementById('newStartDate').value;
+            const newEndDate = document.getElementById('newEndDate').value;
+
+            if (!name || !newStartDate || !newEndDate) {
+                alert('Please fill in all fields');
+                return;
+            }
+
+            const existingBooking = bookings.find(booking => booking.name.toLowerCase() === name.toLowerCase());
+            if (!existingBooking) {
+                alert('Guest not found');
+                return;
+            }
+
+            existingBooking.startDate = newStartDate;
+            existingBooking.endDate = newEndDate;
+
+            renderCalendar();
+            document.getElementById('updateForm').style.display = 'none';
+            document.getElementById('guestName').value = '';
+            document.getElementById('newStartDate').value = '';
+            document.getElementById('newEndDate').value = '';
+        }
+
         renderCalendar();
     </script>
 </body>
