--- a/mobile.html
+++ b/mobile.html
@@ -6,8 +6,132 @@
     <title>Chagai's Colorful Bookings</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* ... (previous styles remain the same) ... */
-
+          body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+        .container {
+            max-width: 100%;
+            padding: 10px;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+        .welcome-message {
+            background: linear-gradient(45deg, #FF6B6B, #4ECDC4, #45B7D1, #FFBE0B);
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 28px;
+            margin-bottom: 15px;
+            border-radius: 10px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            animation: gradientShift 10s ease infinite;
+        }
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        .controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+        .button {
+            background-color: #45B7D1;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #3a9cb3;
+        }
+        .calendar {
+            background-color: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+        .calendar-header {
+            background-color: #45B7D1;
+            color: white;
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            text-align: center;
+            font-weight: bold;
+            padding: 10px 0;
+        }
+        .calendar-grid {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            flex-grow: 1;
+        }
+        .calendar-day {
+            border: 1px solid #ddd;
+            padding: 5px;
+            min-height: 60px;
+            font-size: 14px;
+            overflow: hidden;
+        }
+        .date {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .guest {
+            font-size: 12px;
+            margin-bottom: 2px;
+            padding: 2px;
+            border-radius: 3px;
+            color: white;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .form-container {
+            background-color: white;
+            padding: 15px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .form-container h2 {
+            margin-top: 0;
+            color: #45B7D1;
+        }
+        input, select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        #bookingForm {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        #bookingForm input {
+            flex: 1;
+            min-width: 120px;
+        }
+        #bookingForm button {
+            flex-basis: 100%;
+        }
         .view-selector {
             margin-bottom: 15px;
         }
